fixed container white space for homepage

--- a/src/index.css
+++ b/src/index.css
@@ -439,7 +439,6 @@ a {
 }
 
 .about-me-container {
-  display: inline-block;
   width: 100%;
   height: 100%;
 }
@@ -734,18 +733,13 @@ a {
 @media only screen and (max-width: 768px) {
   .resume-container .resume-content .resume-header {
     flex-direction: column;
-    justify-content: space-between;
     align-items: flex-start;
   }
   .resume-container .resume-content .resume-header .job-title {
     font-size: 18px;
   }
-  .resume-container .resume-content .resume-header .job-duration {
-    font-size: 14px;
-    opacity: 0.8;
-  }
   .resume-container .resume-content .job-organization {
-    font-size: 20px;
+    font-size: 18px;
   }
   .resume-container .resume-content .job-organization .city {
     font-size: 14px;
